--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -31,7 +31,7 @@ jobs:
           DB_PORT: ${{ secrets.DB_PORT }}
           PORT: ${{ secrets.PORT }}
 
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Configure AWS credentials
@@ -39,7 +39,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{secrets.AWS_REGION}}
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -59,18 +59,33 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
-      - name: Fill in the new image ID in the Amazon ECS task definition
-        id: task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@v1
-        with:
-          task-definition: ${{secrets.ECS_TASK_DEFINITION_NAME}}
-          container-name: ${{secrets.MY_CONTAINER_NAME}}
-          image: ${{ steps.build-image.outputs.image }}
+      - name: Get current task definition from AWS ECS
+        id: get-task-def
+        run: |
+          TASK_DEF_ARN=$(aws ecs describe-services --cluster ${{ secrets.ECS_CLUSTER_NAME }} --services ${{ secrets.ECS_SERVICE_NAME }} --query "services[0].taskDefinition" --output text)
+          aws ecs describe-task-definition --task-definition $TASK_DEF_ARN > task-def.json
 
-      - name: Deploy Amazon ECS task definition
-        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+      - name: Update task definition with new image
+        id: update-task-def
+        run: |
+          jq --arg IMAGE "${{ steps.build-image.outputs.image }}" \
+          '.taskDefinition | del(.registeredAt, .registeredBy, .taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .deregisteredAt) | .containerDefinitions[0].image = $IMAGE | .family = "${{secrets.ECS_TASK_DEFINITION_NAME}}"' task-def.json > updated-task-def.json
+
+      - name: Register updated task definition
+        id: register-task-def
+        run: |
+          TASK_DEF_ARN=$(aws ecs register-task-definition --cli-input-json file://updated-task-def.json --query "taskDefinition.taskDefinitionArn" --output text)
+          echo "taskDefinitionArn=$TASK_DEF_ARN" >> $GITHUB_ENV
+
+      - name: Log taskDefinitionArn
+        run: |
+          echo "log taskDefinitionArn=${{ env.taskDefinitionArn }}"
+
+      - name: Deploy updated task definition to ECS service
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v2
         with:
-          task-definition: ${{ steps.task-def.outputs.task-definition }}
-          service: ${{secrets.ECS_SERVICE_NAME}}
-          cluster: ${{secrets.ECS_CLUSTER_NAME}}
+          task-definition: updated-task-def.json
+          service: ${{ secrets.ECS_SERVICE_NAME }}
+          cluster: ${{ secrets.ECS_CLUSTER_NAME }}
           wait-for-service-stability: true
+          wait-for-minutes: 60
